--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
 /*  your css code here. If applicable */
+:root{
+	background-color:skyblue;
+}
+nav{
+	color:white;
+	background-color:black;
+}
+p:last-child{
+	color:red;
+}
+li:last-child {
+	background-color:white;
+}
+li:first-child {
+	background-color:white;
+}
+li:nth-child(2n) {
+	background-color:grey;
+}
+li:nth-child(3n) {
+	background-color:pink;
+}
